--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>TRIVUL</title>
 
     <!-- stylesheets -->
-	<link rel="stylesheet" type="text/css" href="css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Dosis|Oxygen" rel="stylesheet">
@@ -27,22 +27,23 @@
 	
 	<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.1/mapbox-gl-directions.js'></script>
 	<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.1/mapbox-gl-directions.css' type='text/css' />
-	
+<!-- 	
 	<header>
 		<h1> TRIVUL </h1>
-	</header>
+	</header> -->
 	<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.min.js'></script>
 	<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.css' type='text/css' />
 	<div id="map"></div>
 	<div class="wrapper">
-		<div class="panel panel-one"></div>
-		<div class="panel panel-two">
+		<!-- <div class="panel panel-one"></div> -->
+<!-- 		<div class="panel panel-two">
 			<div id="introBox">
 				<h1 class="introText" id="textOne"> WELCOME TO TRIVUL. </h1>
 				<h1 class="introText" id="textTwo"> LETS SORT YOUR TRANSPORT IN NEW ZEALAND. </h1>
 			</div>
-		</div>
+		</div> -->
  		<div class="panel panel-three">
+ 			<h1> TRIVUL </h1>
 			<div id="particles-js"></div>
 			<form id="form-travel" data-parsley-validate>
 				<fieldset>
